# vowels

./: .gitignore  CLAUDE.md  README.md  male_standard.csv  male_standard.parquet  male_standard_all.csv  male_standard_all.parquet  pyproject.toml  run.sh  standard.csv
data/: labels.txt  reading_list.txt
data/standards/: male_standard.csv  male_standard.parquet
scripts/: bark.ipynb  bark.py
sessions/session1/: session1.TextGrid
sessions/session2/: session2.TextGrid  session2_bark_projections.html  session2_formants.csv  session2_formants.parquet  session2_labeled.TextGrid  session2_nucleus.TextGrid  session2_vowel_space.html
sessions/session3/: session3.TextGrid  session3_formants.csv  session3_labeled.TextGrid  session3_nucleus.TextGrid
sessions/session4/: session4.TextGrid  session4_bark_projections.html  session4_bark_space.html  session4_formants.csv  session4_formants.parquet  session4_intervals.csv  session4_labeled.TextGrid  session4_nucleus.TextGrid  session4_vowel_space.html  session4_vowel_space_diph.html  session4_vowel_space_mono.html
sessions/session5/: session5.TextGrid  session5_bark_projections.html  session5_formants.csv  session5_labeled.TextGrid  session5_nucleus.TextGrid  session5_vowel_space.html
src/vowels/: __init__.py  aggregate.py  cli.py  colors.py  detect_silences.py  extract_formants.py  label_textgrid.py  labels.py  make_nucleus_points.py  paths.py  schema.py
tests/: test_aggregate.py  test_ellipse.py  test_formants.py  test_label_parsing.py  test_labels.py  test_nucleus.py
typings/parselmouth/: __init__.pyi  praat.pyi
(+11 files in other folders)
