[project]
name = "vowels"
version = "0.1.0"
description = "Vowel formant analysis toolkit with Praat and Parselmouth"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.2.1",
    "fire>=0.7.1",
    "ipykernel>=7.3.0",
    "polars>=1.41.2",
    "praat-parselmouth>=0.4.7",
]

[build-system]
requires = ["uv_build<=0.11.23"]
build-backend = "uv_build"

[tool.pyrefly]


[tool.ruff]
target-version = "py314"
src = ["src"]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear: likely bugs / footguns
    "I",   # isort-style import checks
    "UP",  # pyupgrade: modern Python syntax
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "ruff>=0.15.18",
]

